--- a/config
+++ b/config
@@ -1,14 +1,11 @@
-ngx_feature="libpq library"
-ngx_feature_libs="-lpq"
 ngx_feature_name=
 ngx_feature_run=no
 ngx_feature_incs="#include <libpq-fe.h>"
-ngx_feature_path=
 ngx_feature_test="PQconndefaults();"
 
-if [ -n "$LIBPQ_LIB" ]; then
-    # explicit set libpq lib path
-    ngx_feature="libpq library in $LIBPQ_LIB (specified by the LIBPQ_LIB env)"
+if [ -n "$LIBPQ_INC" -o -n "$LIBPQ_LIB" ]; then
+    # specified by LIBPQ_INC and LIBPQ_LIB
+    ngx_feature="libpq library in directories specified by LIBPQ_INC ($LIBPQ_INC) and LIBPQ_LIB ($LIBPQ_LIB)"
     ngx_feature_path="$LIBPQ_INC"
     if [ $NGX_RPATH = YES ]; then
         ngx_feature_libs="-R$LIBPQ_LIB -L$LIBPQ_LIB -lpq"
@@ -16,67 +13,67 @@ if [ -n "$LIBPQ_LIB" ]; then
         ngx_feature_libs="-L$LIBPQ_LIB -lpq"
     fi
     . auto/feature
-fi
-
-if [ $ngx_found = no ]; then
+else
+    # auto-discovery
     ngx_feature="libpq library"
+    ngx_feature_path=
     ngx_feature_libs="-lpq"
     . auto/feature
-fi
 
-if [ $ngx_found = no ]; then
-    # Debian
-    ngx_feature="libpq library in /usr/../postgresql/"
-    ngx_feature_path="/usr/include/postgresql"
-    . auto/feature
-fi
-
-if [ $ngx_found = no ]; then
-    # FreeBSD
-    ngx_feature="libpq library in /usr/local/"
-    ngx_feature_path="/usr/local/include"
-    if [ $NGX_RPATH = YES ]; then
-        ngx_feature_libs="-R/usr/local/lib -L/usr/local/lib -lpq"
-    else
-        ngx_feature_libs="-L/usr/local/lib -lpq"
+    if [ $ngx_found = no ]; then
+        # Debian
+        ngx_feature="libpq library in /usr/../postgresql/"
+        ngx_feature_path="/usr/include/postgresql"
+        . auto/feature
     fi
-    . auto/feature
-fi
 
-if [ $ngx_found = no ]; then
-    # OpenBSD
-    ngx_feature="libpq library in /usr/local/../postgresql/"
-    ngx_feature_path="/usr/local/include/postgresql"
-    if [ $NGX_RPATH = YES ]; then
-        ngx_feature_libs="-R/usr/local/lib -L/usr/local/lib -lpq"
-    else
-        ngx_feature_libs="-L/usr/local/lib -lpq"
+    if [ $ngx_found = no ]; then
+        # FreeBSD
+        ngx_feature="libpq library in /usr/local/"
+        ngx_feature_path="/usr/local/include"
+        if [ $NGX_RPATH = YES ]; then
+            ngx_feature_libs="-R/usr/local/lib -L/usr/local/lib -lpq"
+        else
+            ngx_feature_libs="-L/usr/local/lib -lpq"
+        fi
+        . auto/feature
     fi
-    . auto/feature
-fi
 
-if [ $ngx_found = no ]; then
-    # NetBSD
-    ngx_feature="libpq library in /usr/pkg/"
-    ngx_feature_path="/usr/pkg/include"
-    if [ $NGX_RPATH = YES ]; then
-        ngx_feature_libs="-R/usr/pkg/lib -L/usr/pkg/lib -lpq"
-    else
-        ngx_feature_libs="-L/usr/pkg/lib -lpq"
+    if [ $ngx_found = no ]; then
+        # OpenBSD
+        ngx_feature="libpq library in /usr/local/../postgresql/"
+        ngx_feature_path="/usr/local/include/postgresql"
+        if [ $NGX_RPATH = YES ]; then
+            ngx_feature_libs="-R/usr/local/lib -L/usr/local/lib -lpq"
+        else
+            ngx_feature_libs="-L/usr/local/lib -lpq"
+        fi
+        . auto/feature
     fi
-    . auto/feature
-fi
 
-if [ $ngx_found = no ]; then
-    # MacPorts
-    ngx_feature="libpq library in /opt/local/"
-    ngx_feature_path="/opt/local/include"
-    if [ $NGX_RPATH = YES ]; then
-        ngx_feature_libs="-R/opt/local/lib -L/opt/local/lib -lpq"
-    else
-        ngx_feature_libs="-L/opt/local/lib -lpq"
+    if [ $ngx_found = no ]; then
+        # NetBSD
+        ngx_feature="libpq library in /usr/pkg/"
+        ngx_feature_path="/usr/pkg/include"
+        if [ $NGX_RPATH = YES ]; then
+            ngx_feature_libs="-R/usr/pkg/lib -L/usr/pkg/lib -lpq"
+        else
+            ngx_feature_libs="-L/usr/pkg/lib -lpq"
+        fi
+        . auto/feature
     fi
-    . auto/feature
+
+    if [ $ngx_found = no ]; then
+        # MacPorts
+        ngx_feature="libpq library in /opt/local/"
+        ngx_feature_path="/opt/local/include"
+        if [ $NGX_RPATH = YES ]; then
+            ngx_feature_libs="-R/opt/local/lib -L/opt/local/lib -lpq"
+        else
+            ngx_feature_libs="-L/opt/local/lib -lpq"
+        fi
+        . auto/feature
+    fi
 fi
 
 if [ $ngx_found = yes ]; then
