updated Test::Nginx and added stuffs to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
 .svn
 test/t/servroot/
+*~
+*.swp
+src/ddebug.h
+src/handler.c
+src/handler.h
+src/keepalive.c
+src/keepalive.h
+src/module.c
+src/module.h
+src/output.h
+src/processor.c
+src/processor.h
+src/upstream.c
+src/upstream.h
+src/util.c
+src/util.h
+build
+build7
+build8
+t.sh
+genmobi.sh
+tags
+*.mobi
